tests/outref/TSC00I.ref

-- TSC00I : select without a from with a syntax error

select * asdfasdfsdf;

[ERROR] PATH:LINENUM DATE TIME : SELECT * with no tables specified is not valid
Error with syntax near (line 1, column 8):

select * asdfasdfsdf;
       ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * asdfasdfsdf;
